force-app/main/default/objects/Account/fields/Count_Of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Contacts__c</fullName>
    <description>Tells how many contacts are there.</description>
    <label>Count Of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>