force-app/main/default/objects/Account/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <description>tells the day</description>
    <label>Day</label>
    <length>10</length>
    <type>Text</type>
</CustomField>