force-app/main/default/objects/Account/fields/Last_Month_Dues__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Dues__c</fullName>
    <label>Last Month Dues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>