force-app/main/default/objects/Account/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Tells the time for the task.</description>
    <label>Time</label>
    <type>Time</type>
</CustomField>