force-app/main/default/objects/Account/listViews/SkillUp_Accounts.listView-meta.xml
<ListView>
    <fullName>SkillUp_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>salesforce,makepositive,nagarro</value>
    </filters>
    <label>SkillUp Accounts</label>
</ListView>